--- a/src/main/resources/templates/changeStudentPassword.html
+++ b/src/main/resources/templates/changeStudentPassword.html
@@ -48,7 +48,7 @@
         }
 
 
-        .crossButton a {
+        #crossButton {
             padding: 8px 8px 8px 32px;
             text-decoration: none;
             font-size: 30px;
@@ -58,13 +58,18 @@
             cursor: pointer;
         }
 
-        .logout a{
-            padding: 8px 8px 8px 32px;
+
+        #logout{
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: right;
             text-decoration: none;
-            font-size: 30px;
-            color: #818181;
-            display: block;
-            transition: 0.3s;
+            font-size: 16px;
+            margin: 2rem 2rem;
+            cursor: pointer;
+
         }
 
 
@@ -110,7 +115,7 @@
     </div>
     <div id="account" class="accountInfo">
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
-        <iframe th:src="@{/info}" width="230" height="400" style="border: none"></iframe>
+        <iframe th:src="@{/staffInfo}" width="230" height="400" style="border: none"></iframe>
         <a id="logout" th:href="@{~/login}">Log out</a>
     </div>
 
