--- a/src/main/resources/templates/createNewUser.html
+++ b/src/main/resources/templates/createNewUser.html
@@ -51,7 +51,7 @@
         }
 
 
-        .crossButton a {
+        #crossButton {
             padding: 8px 8px 8px 32px;
             text-decoration: none;
             font-size: 30px;
@@ -61,15 +61,19 @@
             cursor: pointer;
         }
 
-        .logout a{
-            padding: 8px 8px 8px 32px;
-            text-decoration: none;
-            font-size: 30px;
-            color: #818181;
-            display: block;
-            transition: 0.3s;
-        }
 
+        #logout{
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: right;
+            text-decoration: none;
+            font-size: 16px;
+            margin: 2rem 2rem;
+            cursor: pointer;
+
+        }
 
         #header {
             transition: margin-left .5s;
@@ -99,11 +103,6 @@
             margin:1rem;
             text-align: right;}
 
-        iframe {
-            width: 80%;
-            height: 20rem;
-            margin: 3rem 3rem;
-        }
 
         .returnToMenu {
             background-color: #4CAF50;
@@ -133,10 +132,7 @@
     </div>
     <div id="account" class="accountInfo">
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
-        <h5>Username:</h5> <p>admin</p>
-        <h5>User Type:</h5> <p>student</p>
-        <h5>Credit Score:</h5> <p>100</p>
-        <h5>Current Borrowed Book(s):</h5> <p>you are not currently borrowing book(s) right now</p>
+        <iframe th:src="@{/staffInfo}" width="230" height="400" style="border: none"></iframe>
         <a id="logout" th:href="@{~/login}">Log out</a>
     </div>
 
