--- a/src/main/resources/templates/staffReturnBook.html
+++ b/src/main/resources/templates/staffReturnBook.html
@@ -48,22 +48,28 @@
             right:1rem;
         }
 
-        .crossButton a {
+        #crossButton {
             padding: 8px 8px 8px 32px;
             text-decoration: none;
             font-size: 30px;
             color: #818181;
             display: block;
             transition: 0.3s;
+            cursor: pointer;
         }
 
-        .logout a{
-            padding: 8px 8px 8px 32px;
+
+        #logout{
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: right;
             text-decoration: none;
-            font-size: 30px;
-            color: #818181;
-            display: block;
-            transition: 0.3s;
+            font-size: 16px;
+            margin: 2rem 2rem;
+            cursor: pointer;
+
         }
 
         .account a:hover {
@@ -109,8 +115,7 @@
     </div>
     <div id="account" class="accountInfo">
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
-        <h5>Username:</h5> <p>admin</p>
-        <h5>User Type:</h5> <p>staff</p>
+        <iframe th:src="@{/staffInfo}" width="230" height="400" style="border: none"></iframe>
         <a id="logout" th:href="@{~/login}">Log out</a>
     </div>
     <div class="menu">
